added all the required imports and testing set up with jest
using jest instead of karma , provides faster tests , that runs directly in the console , I fully tested on my machine and it works .

PS : this preset is copied from my portfolio

--- a/angular.json
+++ b/angular.json
@@ -83,19 +83,13 @@
             "polyfills": [
               "zone.js",
               "zone.js/testing"
-            ],
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
+            ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
