--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
+    "@angular/material": "^17.3.5",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
@@ -30,10 +31,10 @@
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.0",
-    "jest":"^29.7.0",
-    "jest-environment-jsdom": "^29.6.3",
     "@types/jest": "^29.5.12",
+    "jasmine-core": "~5.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.6.3",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
@@ -43,7 +44,9 @@
   },
   "jest": {
     "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": ["<rootDir>/setup-jest.ts"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-jest.ts"
+    ],
     "globalSetup": "jest-preset-angular/global-setup"
   }
 }
